--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+/* Global Styling */
+
+body,h1,h2,h3{
+  margin: 0;
+}
+body{
+  /* background-color: rgb(255, 111, 118); */
+  background: radial-gradient(50% 50% at 50% 50%, #FB6C80 27.6%, #FB9E82 100%);;
+  max-width: 1000px;
+  margin-inline: auto;
+}
+h1,h2{
+  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+  margin-right: 2rem;
+  /* text-align: right; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  color: azure;
+  font-size: 2rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  font-weight: 400;
+  font-size: 1.6rem;
 }
